syntax="proto3";

package greet;

message SqrtRequest{
    int32 number =1; // uint32 for only +ve number
}

message SqrtResponse{
    double result=1;
}